--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,7 @@ jobs:
       run: cmake "--preset=ci-$("${{ matrix.os }}".split("-")[0])"
 
     - name: Build
-      run: cmake --build build --config Release -j 2
+      run: cmake --build build --config Release
 
     - name: Install
       run: cmake --install build --config Release --prefix prefix
