Add imgui to build an example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,30 @@ project(
 include(cmake/project-is-top-level.cmake)
 include(cmake/variables.cmake)
 
+# ---- Make prefix rules ----
+
+if( NOT DEFINED PREFIX_SYSTEM)
+    set(PREFIX_SYSTEM ${CMAKE_SYSTEM_NAME})
+    message(NOTICE "Using ${CMAKE_SYSTEM_NAME} as target system" )
+else()
+    message(NOTICE "Using ${PREFIX_SYSTEM} as target system" )
+endif()
+
+# URLs
+if (${PREFIX_SYSTEM} STREQUAL "Windows")
+    set(FILE_IMGUI lua-imgui-win64.zip)
+elseif (${PREFIX_SYSTEM} STREQUAL "Linux")
+    set(FILE_IMGUI lua-imgui-ubuntu.zip)
+elseif (${PREFIX_SYSTEM} STREQUAL "Darwin")
+    set(FILE_IMGUI lua-imgui-macos.zip)
+endif()
+set(URL_IMGUI https://nightly.link/Simon-L/imgui-luajit-setup/workflows/build/main/${FILE_IMGUI})
+
+file(
+    DOWNLOAD ${URL_IMGUI} ${CMAKE_BINARY_DIR}/${FILE_IMGUI}
+    SHOW_PROGRESS
+)
+
 # ---- Declare library ----
 
 add_library(
@@ -60,6 +84,21 @@ else()
     )
 endif()
 
+add_custom_target(add_imgui_1
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/ig   
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+add_custom_target(add_imgui ALL
+    DEPENDS add_imgui_1
+    COMMAND ${CMAKE_COMMAND} -E tar xzf ${CMAKE_BINARY_DIR}/${FILE_IMGUI}
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_BINARY_DIR}/ig/lua ${CMAKE_BINARY_DIR}/prefix/share/lua/5.1
+    COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_BINARY_DIR}/ig/lua
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_BINARY_DIR}/ig ${CMAKE_BINARY_DIR}/prefix/bin
+    COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_BINARY_DIR}/ig
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/ig
+)
+
+add_dependencies(add_imgui hererocks)
 add_dependencies(mfx-base-app_exe hererocks)
 add_dependencies(mfx-base-app_lib hererocks)
 
