--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,11 @@ jobs:
     - name: Install
       run: cmake --install build --config Release --prefix prefix
 
+    - uses: actions/upload-artifact@v4
+      with:
+        name: mfx-base-app-${{ matrix.os }}
+        path: ${{ github.workspace }}/build/prefix/
+
     # - name: Test
     #   working-directory: build
     #   run: ctest --output-on-failure --no-tests=error -C Release -j 2
