--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-2022]
-        # os: [macos-12, ubuntu-22.04, windows-2022]
+        os: [macos-12, ubuntu-22.04, windows-2022]
 
     runs-on: ${{ matrix.os }}
 
