--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,7 @@ INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/prefix/ DESTINATION .)
 INSTALL(DIRECTORY ${LuaJIT-ImGui_SOURCE_DIR}/lua/imgui DESTINATION share/lua/5.1/)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/${APP_FILE}
         PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-        DESTINATION ${CMAKE_BINARY_DIR}/prefix/)
+        DESTINATION .)
 install(
     TARGETS mfx-base-app_exe
     DESTINATION .
