--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,7 @@ endif()
 
 set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS_SKIP TRUE)
 include (InstallRequiredSystemLibraries)
-INSTALL(FILES $<TARGET_FILE:cimgui_sdl> $<TARGET_FILE:SDL2> DESTINATION bin)
+INSTALL(TARGETS cimgui_sdl SDL2 DESTINATION bin)
 INSTALL(FILES ${LuaJIT-GL_SOURCE_DIR}/gl.lua ${LuaJIT-SDL2_SOURCE_DIR}/sdl2_ffi.lua ${LuaJIT-SDL2_SOURCE_DIR}/sdlAudioPlayer.lua DESTINATION share/lua/5.1)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/prefix/ DESTINATION .)
 INSTALL(DIRECTORY ${LuaJIT-ImGui_SOURCE_DIR}/lua/imgui DESTINATION share/lua/5.1/)
