--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,3 +65,32 @@ jobs:
       with:
         name: mfx-base-app-${{ matrix.out-dir-suffix }}
         path: ${{ github.workspace }}/build/install/
+
+  publish-nightly:
+    name: Publish Nightly
+    runs-on: ubuntu-22.04
+    needs: [ build ]
+    steps:
+      - name: Delete old release assets
+        uses: mknejp/delete-release-assets@v1
+        with:
+          token: ${{ github.token }}
+          tag: Nightly # This may also be of the form 'refs/tags/staging'
+          assets: '*'
+          fail-if-no-assets: false
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v4
+      - name: Check
+        shell: bash
+        run: |
+          tar -C mfx-base-app-macos -czf mfx-base-app-macos.tar.gz .
+          tar -C mfx-base-app-ubuntu -czf mfx-base-app-ubuntu.tar.gz .
+          tar -C mfx-base-app-windows -czf mfx-base-app-windows.tar.gz .
+      - name: Upload release assets
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: '*.tar.gz'
+          tag: Nightly
+          overwrite: true
+          file_glob: true
