--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install libgl
-      if: matrix.os == 'ubuntu-22.04'
+      if: ${{ startsWith(matrix.os, 'ubuntu') }}
       run: |
         sudo apt update
         sudo apt install libgl-dev libxext-dev
